<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#272727"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#454545">

            <ImageView
                android:id="@+id/iv_app"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_power" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_app"
                android:text="@string/permission"
                android:textColor="#008EFF"
                android:textSize="14sp" />

        </RelativeLayout>

        <ScrollView
            android:id="@+id/SCROLLER_ID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/RelativeLayout"
            android:layout_above="@+id/LinearLayout"
            android:padding="15dp"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/LinearLayout"
                android:layout_below="@+id/RelativeLayout"
                android:text="@string/permission2"
                android:textColor="#FFF"
                android:textSize="14sp" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#008EFF"
                android:layout_margin="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:background="@drawable/bg_button"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/btn_ok"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/bg_button"
                tools:text="@string/ok"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#008EFF" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>